[project]
name = "nas-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "librosa>=0.10.2.post1",
    "loguru>=0.7.3",
    "matplotlib>=3.9.4",
    "numpy",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchcrepe>=0.0.23",
    "tqdm>=4.67.1",
]

[project.scripts]
nas-eval = "nas_eval:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.7",
]
